Add content to recipe page

--- a/recipes/macaroni-and-tomato-juice.html
+++ b/recipes/macaroni-and-tomato-juice.html
@@ -3,10 +3,30 @@
 
 <head>
     <meta charset="UFT-8">
-    <title>Recipe Fro Mac and Mater Juice</title>
+    <title>Recipe For Mac and Mater Juice</title>
 </head>
 
 <body>
     <h1>Macaroni and Tomato Juice</h1>
+    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjVPk8Sj93mMNHtJHvx4gmVc8RXQ1EGOGt7N2RngclwyxPs9YV1l2oyR6zrgVTAnQ2XqWNC2aFmagb2t6NDhW1gzGt2KkPWAbN0dZvqjne_6e4QF_IOHvwWMuZbw8-EOz4VloArxBW9qlE/s640/Macaroni+and+tomatoes+V.jpg" alt="Macaroni and mater juice in a bowl." width="300">
+    <h3>Description</h3>
+    <p>Macaroni and tomato juice is a legendary dish that is easy to make, and easy to eat. While most people have never heard of it, I think it is amazing. My partner has never heard of it, but I put her on real quick.</p>
+    <p>Not much else can be said about the dish, though you'd be a fool to discount it. One slurp and guzzle, and you'll be tighter than a puzzle.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 Box Maccy</li>
+        <li>1 Bottle Mater Juice</li>
+        <li>Thanguh butter</li>
+        <li>Peench of salt</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Salt and boil water</li>
+        <li>Pour macaroni into pot</li>
+        <li>Drain water after boil</li>
+        <li>Pour mater juice into pot</li>
+        <li>Add thanguh butter</li>
+        <li>Add peench of salt</li>
+    </ol>
 </body>
 </html>
