--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="../odin-recipes/recipes/macaroni-and-tomato-juice">Macaroni and Tomato Juice</a>
+    <a href="../odin-recipes/recipes/macaroni-and-tomato-juice.html">Macaroni and Tomato Juice</a>
 </body>
 </html>
