Add Turkey and Rice to Page

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="../odin-recipes/recipes/macaroni-and-tomato-juice.html">Macaroni and Tomato Juice</a>
+    <a href=""
 </body>
 </html>
