Separate Pages to Give Turkey N Rice its Own Page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="../odin-recipes/recipes/macaroni-and-tomato-juice.html">Macaroni and Tomato Juice</a>
-    <a href=""
+    <p><a href="../odin-recipes/recipes/macaroni-and-tomato-juice.html">Macaroni and Tomato Juice</a></p>
+    <p><a href="../odin-recipes/recipes/tukey-n-rice.html">Turkey n Rice</a></p>
 </body>
 </html>
