--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>Odin Recipes</h1>
     <p><a href="../odin-recipes/recipes/macaroni-and-tomato-juice.html">Macaroni and Tomato Juice</a></p>
     <p><a href="../odin-recipes/recipes/tukey-n-rice.html">Turkey n Rice</a></p>
+    <p><a href="../odin-recipes/recipes/vegetable-soup.html">Veggie Soup</a></p>
 </body>
 </html>
